--- a/example.ipynb
+++ b/example.ipynb
@@ -4,6 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mtick\n",
+    "from oxford_log_processing import proccess_log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Oxford RIE Log Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following example shows how to use the processing log function to load in and parse log files. The returned stats array returns the measured variables as followed:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "|index|   parameter|units|\n",
     "|-----|------------|-----|\n",
     "|    0|        Date|epoch|\n",
@@ -24,26 +60,6 @@
     "|   29|     Ar Flow| sccm|\n",
     "|   31|     O2 Flow| sccm|\n",
     "|   33|Chiller Temp|    C|"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-07-12T07:28:28.462676Z",
-     "start_time": "2019-07-12T07:28:28.112617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as mtick\n",
-    "from oxford_log_processing import proccess_log"
    ]
   },
   {
@@ -227,7 +243,7 @@
     "width": "79px"
    },
    "toc_section_display": "block",
-   "toc_window_display": true,
+   "toc_window_display": false,
    "widenNotebook": false
   }
  },
