updated table of parameters

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": "true"
+   },
+   "source": [
+    "# Table of Contents\n",
+    " <p><div class=\"lev1 toc-item\"><a href=\"#Init\" data-toc-modified-id=\"Init-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Init</a></div><div class=\"lev1 toc-item\"><a href=\"#Oxford-RIE-Log-Processing\" data-toc-modified-id=\"Oxford-RIE-Log-Processing-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Oxford RIE Log Processing</a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Init"
@@ -48,9 +58,9 @@
     "|index|   parameter|units|\n",
     "|-----|------------|-----|\n",
     "|    0|        Date|epoch|\n",
-    "|    1|           ?|     |\n",
-    "|    3|           ?|     |\n",
-    "|    5|           ?|     |\n",
+    "|    1|   Step time|    s|\n",
+    "|    3|   Pump time|    s|\n",
+    "|    5|    Pressure|mTorr|\n",
     "|    7|    Position|  Deg|\n",
     "|    9|     Forward|    W|\n",
     "|   11|   Reflected|    W|\n",
